# neato

./: .gitignore  README.md  neato.cabal
src/: Neato.hs
src/AI/: Neato.hs
src/GA/: Neato.hs
src/GA/Neato/: Genome.hs  Network.hs  Population.hs  Simulation.hs  Species.hs
test/: GenomeTest.hs  NeatoTest.hs  NetworkTest.hs  Spec.hs  TestNeato.hs  Utils.hs
