name:                neato
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/wdhg/neato#readme
license:             BSD3
license-file:        LICENSE
author:              wdhg
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Neato
  build-depends:
    base >= 4.7 && < 5,
    random
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/wdhg/neato
